docs(theme-toggle): update documentation format and links

--- a/apps/www/content/docs/components/theme-toggle.mdx
+++ b/apps/www/content/docs/components/theme-toggle.mdx
@@ -1,16 +1,12 @@
----
-title: "Theme Toggle"
-description: "A customizable dark mode toggle component."
-component: true
-links:
-  doc: https://next-themes.js.org/
-  api: https://next-themes.js.org/docs
----
+| Property    | Value                                                        |
+|-------------|--------------------------------------------------------------|
+| **Title**   | Theme Toggle                                                 |
+| **Description** | A customizable dark mode toggle component.                |
+| **Component** | true                                                        |
+| **Documentation Link** | [docs](https://next-themes.js.org/)                   |
+| **API Link** | [next-themes](https://next-themes.js.org/docs)                       |
 
-<ComponentPreview
-  name="theme-toggle-demo"
-  description="A theme toggle component that switches between light and dark modes."
-/>
+<ComponentPreview name="theme-toggle-demo" description="A theme toggle component that switches between light and dark modes." />
 
 # Installation
 
@@ -25,15 +21,13 @@ links:
   </TabsContent>
 
   <TabsContent value="manual">
-    <Steps>
-      <Step>Install the necessary dependencies:</Step>
-      ```bash
-      npm install @shadcn/theme-toggle
-      ```
-      <Step>Copy and paste the following code into your project.</Step>
-      <ComponentSource name="theme-toggle" />
-      <Step>Update the import paths to match your project setup.</Step>
-    </Steps>
+      <Steps>
+            <Step>Install the necessary dependencies:</Step>
+                   npm install @shadcn/theme-toggle
+            <Step>Copy and paste the following code into your project.</Step>
+            <ComponentSource name="theme-toggle" />
+            <Step>Update the import paths to match your project setup.</Step>
+      </Steps>
   </TabsContent>
 </Tabs>
 
