--- a/apps/www/content/docs/dark-mode/remix.mdx
+++ b/apps/www/content/docs/dark-mode/remix.mdx
@@ -30,6 +30,7 @@ npm install remix-themes
 
 ```tsx title="app/sessions.server.tsx"
 import { createThemeSessionResolver } from "remix-themes"
+import { createCookieSessionStorage } from "@remix-run/node"
 
 // You can default to 'development' if process.env.NODE_ENV is not set
 const isProduction = process.env.NODE_ENV === "production"
@@ -110,7 +111,7 @@ Create a file in `/routes/action.set-theme.ts`. Ensure that you pass the filenam
 ```tsx title="app/routes/action.set-theme.ts"
 import { createThemeAction } from "remix-themes"
 
-import { themeSessionResolver } from "./sessions.server"
+import { themeSessionResolver } from "../sessions.server"
 
 export const action = createThemeAction(themeSessionResolver)
 ```
